# VulkanFramework2D

./: .gitignore  CMakeLists.txt  LICENSE  pch.h
.zed/: debug.json
Assets/Shaders/: shader.slang
build-debug/: VulkanFramework2D
include/: AppWindow.h  FileUtility.h  Game.h  GameWindow.h  Logs.h  VulkanCommandPool.h  VulkanEnums.h  VulkanInstance.h  VulkanLogicalDevice.h  VulkanPhysicalDevice.h  VulkanPipeline.h  VulkanRenderer.h  VulkanShaderModule.h  VulkanStructs.h  VulkanSwapchain.h  WindowSurface.h
src/: AppWindow.cpp  FileUtility.cpp  Game.cpp  GameWindow.cpp  Logs.cpp  VulkanCommandPool.cpp  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanPhysicalDevice.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanShaderModule.cpp  VulkanSwapchain.cpp  WindowSurface.cpp  main.cpp
